# otl

./: CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.txt  otl_oesgp.i  otl_storkgp.i
SOGP_MATLAB/: addToPSOGP.m  addToPSOGP.m~  addToPSOGP_C.m  deleteFromPSOGP.m  deleteFromPSOGP.m~  deleteFromPSOGP_C.m  getKStar.m  getKStar.m~  getKStarVector.m  image_classification_test.m  image_classification_test_C.m  initPSOGP.m  initPSOGP_C.m  kern_gaussian.m  predictPSOGP.m  predictPSOGP.m~  predictPSOGP_C.m  psogp_classification_C.m  psogp_classification_test.m  psogp_test.m  psogp_test.m~  rkern_gaussian.m  rkern_gaussian_mex.c
SOGP_MATLAB/data/: image_dataset.test
doc/: REAME.txt
otl_matlab/: compileHelpers.m  setupOTL.m
otl_matlab/classifiers/: FOLMDiscBayesClassifier.m  FOLMGenBayesClassifier.m
otl_matlab/examples/: NoisySine_FMemOGP2_Opt.m  Problem_Template.m
otl_matlab/helpers/EVT_Multivariate/: EVTTest.m  EVT_GaussianDF_Gy.m  EVT_GaussianEVD_Fe.m  EVT_GaussianEVD_FindParams.m  EVT_GaussianEVD_Ge.m  EVT_GaussianPDF_gy.m  EVT_GaussianQuantile_Gy.m  Plot_GaussianDensities.m  RandomCovar.m  mahalanobis.m  readme.txt
otl_matlab/helpers/ErrorScores/: lognormlikelihood.m  mnae.m  mnse.m  nlpd.m  nmse.m  nrmse.m  rmse.m
otl_matlab/helpers/KernelHelpers/: getRecKernMat.c  sq_dist.c  sq_dist.m
otl_matlab/helpers/KernelNoiseGetters/: getGaussKernNoise.m  getRecIsoKernNoise.m  getRecKernNoise.m  getTempKernNoise.m
otl_matlab/helpers/KernelPlotters/: plotRecIsoKernParams.m  plotRecKernParams.m  plotTempKernParams.m
otl_matlab/helpers/Misc/: logsumexp.m  vecToCellPartition.m
otl_matlab/kernels/: covRecSEardNoise.m  covRecSEisoNoise.m  covSEardNoise.m  covSEisoNoise.m  covTempSEardNoise.m  getTempSEMat.m
otl_matlab/learners/: FMemOGP2f.m  OnlineLocalMemOGP.m
otl_matlab/memory/: FCyclicReservoir.m  FDelayLine.m  FMultiCyclicReservoir.m  FReservoir.m
otl_matlab/optimisers/: FOHGD.m
src/MATLAB_mex/: ObjectHandle.h  README.txt  compileSTORKGP_mex.m  createSTORKGP.cpp  loadSTORKGP.cpp  predictSTORKGP.cpp  testSTORKGP.m
src/MATLAB_mex/OESGP/: OESGP.m  compileOESGP_mex.m  createOESGP.cpp  destroyOESGP.cpp  loadOESGP.cpp  predictOESGP.cpp  resetOESGP.cpp  saveOESGP.cpp  testOESGP.m  trainOESGP.cpp  updateOESGP.cpp
src/MATLAB_mex/STORKGP/: ObjectHandle.h  STORKGP.m  compileSTORKGP_mex.m  createSTORKGP.cpp  destroySTORKGP.cpp  loadSTORKGP.cpp  resetSTORKGP.cpp  saveSTORKGP.cpp  testSTORKGP.m  trainSTORKGP.cpp  updateSTORKGP.cpp
src/examples/: oesgp_sin.cpp  storkgp_sin.cpp
src/examples/python_examples/: test_oesgp.py  test_oesgp_ext.py  test_oesgp_mod.py
src/libOTL/: otl.cpp  otl.h  otl_aug_feature.h  otl_aug_state.h  otl_exception.h  otl_helpers.cpp  otl_helpers.h  otl_kernel.h  otl_kernel_factory.h  otl_kernel_gaussian.cpp  otl_kernel_gaussian.h  otl_kernel_recursive_equality_gaussian.cpp  otl_kernel_recursive_equality_gaussian.h  otl_kernel_recursive_gaussian.cpp  otl_kernel_recursive_gaussian.h  otl_learning_algs.h  otl_oesgp.cpp  otl_oesgp.h  otl_reservoir.cpp  otl_reservoir.h  otl_rls.cpp  otl_rls.h  otl_sogp.cpp  otl_sogp.h  otl_storkgp.cpp  otl_storkgp.h  otl_window.cpp  otl_window.h  storkgp.h.autosave
src/main/: otldemo.cpp
